Fix text wrap when line is too long

--- a/src/ngx-json-viewer/ngx-json-viewer.component.scss
+++ b/src/ngx-json-viewer/ngx-json-viewer.component.scss
@@ -24,6 +24,8 @@ $type-colors: (
     margin: 1px 1px 1px 12px;
 
     .segment-main {
+      word-wrap: break-word;
+
       .toggler {
         position: absolute;
         margin-left: -14px;
